// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CxDropdownItem customize 1`] = `
<div>
  <div
    class="dropdown-item bazinga"
  >
    Test
  </div>
</div>
`;

exports[`loads and displays CxDropdownItem component 1`] = `
<div>
  <a
    class="dropdown-item"
  >
    Test
  </a>
</div>
`;
